Update the grammer errors

--- a/document_indexing.ipynb
+++ b/document_indexing.ipynb
@@ -21,7 +21,11 @@
     "id": "ShJJc7B1M-RL"
    },
    "source": [
-    "## OpenAI environment variable setup\n"
+    "## Data Indexing\n",
+    "- Read the Document Transformer.pdf\n",
+    "- Split the text as chunks\n",
+    "- Create the embedings for the document\n",
+    "- Store in the chroma db\n"
    ]
   },
   {
@@ -42,7 +46,7 @@
    "source": [
     "DOC_PATH = \"Transformer.pdf\"\n",
     "CHROMA_PATH = \"chromadb\"\n",
-    "  # Replace with your actual OpenAI API key\n",
+    "\n",
     "OPENAI_API_KEY = os.environ[\"OPENAI_API_KEY\"]\n",
     "# Load and split the document\n",
     "loader = PyPDFLoader(DOC_PATH)\n",
